@@ -14,8 +14,11 @@ using namespace ShUtil;
 
 class TangentArrows : public Shader {
 public:
-  TangentArrows();
-  ~TangentArrows();
+  TangentArrows()
+    : Shader("Debugging: Tangent Arrows")
+  {}
+  
+  ~TangentArrows() {}
 
   bool init();
 
@@ -28,15 +31,6 @@ public:
 
   static TangentArrows instance;
 };
-
-TangentArrows::TangentArrows()
-  : Shader("Debugging: Tangent Arrows")
-{
-}
-
-TangentArrows::~TangentArrows()
-{
-}
 
 void TangentArrows::render()
 {
@@ -61,7 +55,7 @@ void TangentArrows::render()
 
       
         e->tangent.getValues(vs);
-        glMultiTexCoord2fvARB(GL_TEXTURE0 + 1, vs);
+        glMultiTexCoord3fvARB(GL_TEXTURE0 + 1, vs);
         
         e->start->pos.getValues(vs); glVertex3fv(vs); 
       }
@@ -100,4 +94,88 @@ bool TangentArrows::init()
 
 
 TangentArrows TangentArrows::instance = TangentArrows();
+
+
+class NormalArrows : public Shader {
+public:
+  NormalArrows()
+    : Shader("Debugging: Normal Arrows")
+  {}
+  
+  ~NormalArrows() {}
+
+  bool init();
+
+  void render();
+  
+  ShProgram vertex() { return vsh;}
+  ShProgram fragment() { return fsh;}
+  
+  ShProgram vsh, fsh;
+
+  static NormalArrows instance;
+};
+
+void NormalArrows::render()
+{
+
+  glPushAttrib(GL_LINE_BIT);
+
+  glLineWidth(2.0);
+  
+  float vs[4];
+  glBegin(GL_LINES);
+  const ShUtil::ShObjMesh& m_obj = *ShrikeCanvas::instance()->getModel();
+  for(ShObjMesh::FaceSet::iterator I = m_obj.faces.begin();
+      I != m_obj.faces.end(); ++I) {
+    ShObjMesh::Edge* e = (*I)->edge;
+    do {
+      
+      for (int i = 0; i < 2; i++) {
+        e->normal.getValues(vs); glNormal3fv(vs);
+
+        float f = (i ? 1.0 : 0.0);
+        glMultiTexCoord1fvARB(GL_TEXTURE0, &f);
+
+      
+        e->tangent.getValues(vs);
+        glMultiTexCoord2fvARB(GL_TEXTURE0 + 1, vs);
+        
+        e->start->pos.getValues(vs); glVertex3fv(vs); 
+      }
+      e = e->next;
+    } while( e != (*I)->edge);
+  }
+  glEnd();
+  glPopAttrib();
+}
+
+bool NormalArrows::init()
+{
+  ShAttrib1f SH_DECL(scale) = .15;
+  ShColor3f SH_DECL(color1) = ShColor3f(1.0, 0.0, 0.0);  
+  ShColor3f SH_DECL(color2) = ShColor3f(0.0, 0.0, 1.0);
+  
+  vsh = SH_BEGIN_PROGRAM("gpu:vertex") {
+    ShInputPosition4f ipos;
+    ShInputNormal3f inorm;
+    ShInputTexCoord1f tc;
+    ShInputVector3f tangent;
+    
+    ShOutputPosition4f opos; // Position in NDC
+    ShOutputColor3f ocol; // Color of result
+    
+    ipos(0,1,2) += tc * scale * inorm;
+    opos = Globals::mvp | ipos; // Compute NDC position
+    ocol = lerp(tc, color2, color1);
+  } SH_END;
+  
+  fsh = SH_BEGIN_FRAGMENT_PROGRAM {
+    ShInOutColor3f col;
+  } SH_END_PROGRAM;
+  return true;
+}
+
+
+NormalArrows NormalArrows::instance = NormalArrows();
 
